--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -55,6 +58,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
     compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
+    compile 'com.miguelcatalan:searchview:1.4.0-modified@aar'
     compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
         transitive = true
     }
@@ -67,6 +71,5 @@ dependencies {
     compile('com.github.kabouzeid:app-theme-helper:1.3.5@aar') {
         transitive = true
     }
-
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
