--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.dominionos.music"
         minSdkVersion 24
         targetSdkVersion 25
-        versionCode 24
-        versionName "v2.4.2"
+        versionCode 25
+        versionName "2.4.3"
     }
     configurations {
         all*.exclude group: 'com.google.firebase', module: 'firebase-core'
