--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    //noinspection GroovyAssignabilityCheck
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
