--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,67 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.dominionos.music">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.dominionos.music"
+        android:installLocation="auto">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.vending.BILLING"/>
 
     <application
-        android:allowBackup="true"
-        android:fullBackupContent="@xml/backup"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light"
-        tools:ignore="GoogleAppIndexingWarning">
+            android:allowBackup="true"
+            android:fullBackupContent="@xml/backup"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            tools:ignore="GoogleAppIndexingWarning">
         <meta-data
-            android:name="com.google.android.backup.api_key"
-            android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A" />
+                android:name="com.google.android.backup.api_key"
+                android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A"/>
         <meta-data
-            android:name="android.max_aspect"
-            android:value="2.1" />
+                android:name="android.max_aspect"
+                android:value="2.1"/>
 
         <activity
-            android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.BrandedLaunch">
+                android:name=".ui.activity.MainActivity"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustPan"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.APP_MUSIC" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.APP_MUSIC"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.AlbumDetailActivity"
-            android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.Light" />
+                android:name=".ui.activity.AlbumDetailActivity"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
         <activity
-            android:name=".ui.activity.PlaylistActivity"
-            android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.Light" />
+                android:name=".ui.activity.PlaylistActivity"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
         <activity
-            android:name=".ui.activity.ArtistDetailActivity"
-            android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.Light" />
+                android:name=".ui.activity.ArtistDetailActivity"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
 
         <service
-            android:name=".service.MusicService"
-            android:enabled="true" />
+                android:name=".service.MusicService"
+                android:enabled="true"/>
 
         <activity
-            android:name=".ui.activity.SettingsActivity"
-            android:label="@string/settings"
-            android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.Light" />
+                android:name=".ui.activity.SettingsActivity"
+                android:label="@string/settings"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
+
+        <receiver android:name=".service.MediaButtonIntentReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
