--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,13 +42,16 @@
         </activity>
         <activity
                 android:name=".ui.activity.AlbumDetailActivity"
-                android:screenOrientation="sensorPortrait"/>
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
         <activity
                 android:name=".ui.activity.PlaylistActivity"
-                android:screenOrientation="sensorPortrait"/>
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
         <activity
                 android:name=".ui.activity.ArtistDetailActivity"
-                android:screenOrientation="sensorPortrait"/>
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
 
         <service
                 android:name=".service.MusicService"
@@ -57,7 +60,8 @@
         <activity
                 android:name=".ui.activity.SettingsActivity"
                 android:label="@string/settings"
-                android:screenOrientation="sensorPortrait"/>
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
 
         <receiver android:name=".service.MediaButtonIntentReceiver">
             <intent-filter>
