--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,20 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix ' DEBUG'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+}
+
+ext {
+    supportLibVersion = '25.3.1'
+    materialDialogsVersion = '0.9.4.4'
 }
 
 dependencies {
@@ -34,35 +43,29 @@ dependencies {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
-        flatDir {
-            dirs 'libs'
-        }
     }
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.android.support:percent:25.3.1'
-    compile 'com.android.support:preference-v7:25.3.1'
-    compile 'com.android.support:preference-v14:25.3.1'
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:palette-v7:$supportLibVersion"
+    compile "com.android.support:support-v4:$supportLibVersion"
+    compile "com.android.support:support-v13:$supportLibVersion"
+    compile "com.android.support:percent:$supportLibVersion"
+    compile "com.android.support:preference-v7:$supportLibVersion"
+    compile "com.android.support:preference-v14:$supportLibVersion"
+    compile "com.android.support:customtabs:$supportLibVersion"
+    compile "com.afollestad.material-dialogs:core:$materialDialogsVersion"
+    compile "com.afollestad.material-dialogs:commons:$materialDialogsVersion"
     compile 'com.google.android.gms:play-services-base:10.2.1'
-    compile 'com.android.support:customtabs:25.3.1'
     compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.15'
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
     compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.4'
-    compile 'com.afollestad.material-dialogs:commons:0.9.4.4'
-    compile 'com.miguelcatalan:searchview:1.4.0-modified@aar'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
         transitive = true
     }
@@ -76,4 +79,6 @@ dependencies {
         transitive = true
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
+    compile project(':lastfm')
 }
