--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,12 @@ dependencies {
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven {
+            url  "http://dl.bintray.com/boswelja/maven"
+        }
         jcenter()
     }
+    compile 'com.boswelja:lastfm-wrapper:0.3'
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
@@ -83,5 +87,4 @@ dependencies {
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
-    compile project(':lastfm')
 }
