--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ ext {
     retroFitVersion = '2.2.0'
 }
 
+
 dependencies {
     //noinspection GroovyAssignabilityCheck
     repositories {
@@ -48,7 +49,6 @@ dependencies {
         maven { url 'https://jitpack.io' }
         jcenter()
     }
-    compile 'com.boswelja:lastfm-wrapper:0.3'
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
@@ -64,15 +64,6 @@ dependencies {
     compile "com.afollestad.material-dialogs:commons:$materialDialogsVersion"
     compile "com.squareup.retrofit2:retrofit:$retroFitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retroFitVersion"
-    compile 'com.google.android.gms:play-services-base:10.2.4'
-    compile 'com.afollestad:async:0.2.3'
-    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.16'
-    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
-    compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
         transitive = true
     }
@@ -85,6 +76,17 @@ dependencies {
     compile('com.github.kabouzeid:app-theme-helper:1.3.5@aar') {
         transitive = true
     }
+    compile 'com.boswelja:lastfm-wrapper:0.3'
+    compile 'com.google.android.gms:play-services-base:10.2.4'
+    compile 'com.afollestad:async:0.2.3'
+    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.16'
+    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
+    compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
+    compile 'com.lapism:searchview:4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
 }
