--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.mnml.music"
-        android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.mnml.music"
+          android:installLocation="auto">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -17,6 +16,7 @@
             android:fullBackupContent="@xml/backup"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:resizeableActivity="true"
             android:supportsRtl="true"
             tools:ignore="GoogleAppIndexingWarning">
         <meta-data
@@ -27,11 +27,11 @@
                 android:value="2.1"/>
 
         <activity
-                android:name="com.mnml.music.ui.activity.MainActivity"
+                android:name=".ui.activity.MainActivity"
                 android:label="@string/app_name"
-                android:windowSoftInputMode="adjustPan"
                 android:screenOrientation="sensorPortrait"
-                android:theme="@style/AppTheme.BrandedLaunch">
+                android:theme="@style/AppTheme.BrandedLaunch"
+                android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -41,39 +41,40 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.mnml.music.ui.activity.AlbumDetailActivity"
+                android:name=".ui.activity.AlbumDetailActivity"
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/AppTheme.Light"/>
         <activity
-                android:name="com.mnml.music.ui.activity.PlaylistActivity"
+                android:name=".ui.activity.PlaylistActivity"
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/AppTheme.Light"/>
         <activity
-                android:name="com.mnml.music.ui.activity.ArtistDetailActivity"
+                android:name=".ui.activity.ArtistDetailActivity"
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/AppTheme.Light"/>
 
         <service
-                android:name="com.mnml.music.service.MusicService"
+                android:name=".service.MusicService"
                 android:enabled="true"/>
 
         <activity
-                android:name="com.mnml.music.ui.activity.SettingsActivity"
+                android:name=".ui.activity.SettingsActivity"
                 android:label="@string/settings"
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/AppTheme.Light"/>
-
         <activity
                 android:name=".utils.shortcuts.ShortcutLauncherActivity"
-                android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                android:launchMode="singleInstance"/>
+                android:launchMode="singleInstance"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
-        <receiver android:name="com.mnml.music.service.MediaButtonIntentReceiver">
+        <receiver android:name=".service.MediaButtonIntentReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.MEDIA_BUTTON" />
+                <action android:name="android.intent.action.MEDIA_BUTTON"/>
             </intent-filter>
         </receiver>
 
+        <activity android:name=".ui.activity.SearchActivity">
+        </activity>
     </application>
 
 </manifest>
