--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,6 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.9.5@aar') {
         transitive = true
     }
-    compile('com.github.kabouzeid:app-theme-helper:1.3.5@aar') {
-        transitive = true
-    }
     compile 'com.boswelja:lastfm-wrapper:0.3'
     compile 'com.google.android.gms:play-services-base:10.2.4'
     compile 'com.afollestad:async:0.2.3'
@@ -87,6 +84,8 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     compile 'com.lapism:searchview:4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.afollestad:aesthetic:0.0.5'
+
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
 }
