--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
@@ -84,7 +87,12 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     compile 'com.lapism:searchview:4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.afollestad:aesthetic:0.2.0'
+    compile 'io.reactivex:rxjava:1.2.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.2'
+    dependencies {
+        compile(name:'aesthetic-release', ext:'aar')
+    }
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
