--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/AppTheme.Light"/>
         <activity
+                android:name=".ui.activity.AboutActivity"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.Light"/>
+        <activity
                 android:name=".utils.shortcuts.ShortcutLauncherActivity"
                 android:launchMode="singleInstance"
                 android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
