--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
     compile "com.android.support:palette-v7:$supportLibVersion"
-    compile "com.android.support:support-v4:$supportLibVersion"
     compile "com.android.support:support-v13:$supportLibVersion"
     compile "com.android.support:percent:$supportLibVersion"
     compile "com.android.support:preference-v7:$supportLibVersion"
@@ -81,11 +80,11 @@ dependencies {
     compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     compile 'com.lapism:searchview:4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.afollestad:aesthetic:0.4.1'
+    compile 'com.afollestad:aesthetic:0.4.2'
+    compile('com.github.hotchemi:permissionsdispatcher:2.4.0')
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
 }
