--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,9 @@ android {
 
 ext {
     supportLibVersion = '25.3.1'
-    materialDialogsVersion = '0.9.4.4'
-    retroFitVersion = '2.2.0'
+    materialDialogsVersion = '0.9.4.5'
+    retroFitVersion = '2.3.0'
+    butterKnifeVersion = '8.6.0'
 }
 
 
@@ -63,28 +64,25 @@ dependencies {
     compile "com.afollestad.material-dialogs:commons:$materialDialogsVersion"
     compile "com.squareup.retrofit2:retrofit:$retroFitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retroFitVersion"
-    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
+    compile('com.mikepenz:materialdrawer:5.9.1@aar') {
         transitive = true
     }
-    compile('com.mikepenz:materialdrawer:5.9.0@aar') {
-        transitive = true
-    }
-    compile('com.mikepenz:aboutlibraries:5.9.5@aar') {
+    compile('com.mikepenz:aboutlibraries:5.9.6@aar') {
         transitive = true
     }
     compile 'com.boswelja:lastfm-wrapper:0.3'
     compile 'com.google.android.gms:play-services-base:10.2.6'
-    compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.16'
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
     compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile "com.jakewharton:butterknife:$butterKnifeVersion"
     compile 'com.lapism:searchview:4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.afollestad:aesthetic:0.4.2'
+    compile 'com.afollestad:aesthetic:0.4.4'
     compile('com.github.hotchemi:permissionsdispatcher:2.4.0')
 
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:2.4.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
