--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,9 @@ dependencies {
         jcenter()
     }
     compile "com.android.support:appcompat-v7:$supportLibVersion"
-    compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
     compile "com.android.support:palette-v7:$supportLibVersion"
-    compile "com.android.support:support-v13:$supportLibVersion"
     compile "com.android.support:percent:$supportLibVersion"
     compile "com.android.support:preference-v7:$supportLibVersion"
     compile "com.android.support:preference-v14:$supportLibVersion"
@@ -73,14 +71,12 @@ dependencies {
     compile 'com.boswelja:lastfm-wrapper:0.3'
     compile 'com.google.android.gms:play-services-base:10.2.6'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.16'
-    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
+    compile 'com.mikepenz:google-material-typeface:3.0.1.0.original@aar'
     compile 'com.github.kabouzeid:AndroidSlidingUpPanel:3.3.0-kmod3'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
-    compile 'com.lapism:searchview:4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.afollestad:aesthetic:0.4.4'
-    compile('com.github.hotchemi:permissionsdispatcher:2.4.0')
+    compile 'com.afollestad:aesthetic:0.4.6'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:2.4.0"
